update my first week plan

--- a/第0周.md
+++ b/第0周.md
@@ -1,6 +1,6 @@
 # 第0周
 
-## 当前个人定位
+## **当前个人定位**
 
 本人是一个极其普通的软件工程学生，对计算机没有任何天赋，本身不带任何buff，同时学习成绩处在年级的中下层。由于前两年半学业的荒废，我对专业课了解掌握的并不多，具体表现于：
 
@@ -19,7 +19,7 @@
 
 其实以上的，换谁来都行，害。
 
-## 目标
+## **目标**
 
 我的偶像一直是吴瀚清，也就是道哥。虽然他已经不做网安了，但是他的很多思想还在影响着我。比如：
 
@@ -37,3 +37,28 @@
 - 在道德方面要正派。
 
 当然，有些朋友会不理解了，为何我讲这么一大堆。很简单，因为有目标动力就会足点，当然没有也没事。
+
+## 要做些什么
+
+- 非常清楚的一件事，要把代码基本功给整好。通过刷题短时间内把熟练度给拉起来，然后通过做开源社区的项目去锻炼实战能力。
+
+- 多看网络安全相关书籍（有选择的看）。github上有两个非常好的项目，一个是[讲书单的]([]())，另一个是有[免费电子版的]([]())。截止我在2023/3/11写下这段话时，讲书单那个在2022年有过更新，免费电子版的在十几小时前有过更新。
+
+- 在有余力的时候（其实尽量去做吧，因为不是什么坏事），可以去关注最新的业界动态：
+
+  - 哪位大佬在什么时候什么地方什么会议上提出了什么；
+  - 他们在哪个哪个平台或者博客上写了什么东西；
+  - 安全界出现了什么什么漏洞或者病毒；
+  - 哪个哪个安全公司又出啥事了；
+
+  这些东西都可以关注关注。
+
+  关于信息获取的话，我推荐用rss软件，简单来说就是一个消息订阅聚合器。有了它，你不用再去一个一个网站博客的去找，而是在一个软件上就可以看到你想关注的全部消息。类似的软件有inoreader、feedly等等，可以试试。
+
+- 把有关web安全的基础都看看，无论以网课还是书籍的方式，要对http等基础有大致了解，对计算机基础而言也同上。本人在和几位同学交流的时候，他们经常会提到一个问题：
+
+  “很多同学在进入工作以后，才返回头去吃基础，白天工作晚上吃，非常辛苦”
+
+  这可能是在上学的时候，较少遇到实操环境下需要的基础知识场景吧。本人想的是，先了解个大概（当然重点肯定要理解透，不是说看看书过过网课就无了），然后就一边学一边查一边问，通过个人、社区、网友、朋友、群组来解决基础问题，同时加深对该问题的理解。
+
+- 然后就是学习web安全方面的内容。现在个人看来，web安全内容是工具的使用和对漏洞的理解。这一块我还没学到，我不敢多说，后面走一步看一步吧。
